--- a/style.css
+++ b/style.css
@@ -90,19 +90,19 @@ input:checked + label .description {
 }
 
 .card[for="c1"]{
-    background-image: url('/image_file/1.jpeg');
+    background-image: url('1.jpeg');
 }
 
 .card[for="c2"]{
-    background-image: url('/image_file/2.jpeg');
+    background-image: url('2.jpeg');
 }
 
 .card[for="c3"]{
-    background-image: url('/image_file/3.jpeg');
+    background-image: url('3.jpeg');
 }
 
 .card[for="c4"]{
-    background-image: url('/image_file/4.jpeg');
+    background-image: url('4.jpeg');
 }
 
 
